--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -80,6 +80,23 @@ services:
       - spring.datasource.username=collie
       - spring.datasource.password=collie
       - eureka.client.service-url.defaultZone=http://collie-discovery:8761/eureka/
+    restart: always
+    networks:
+      - private-network
+    depends_on:
+      - db-collie
+      - discovery
+
+  microservice:
+    build:
+      context: ../collie.service/
+      dockerfile: Dockerfile
+    image: collie-service:latest
+    environment:
+      - spring.datasource.url=jdbc:postgresql://collie-db-collie:5432/collie
+      - spring.datasource.username=collie
+      - spring.datasource.password=collie
+      - eureka.client.service-url.defaultZone=http://collie-discovery:8761/eureka/
     deploy:
       mode: replicated
       replicas: 1
