mudando nome aplicação microservice

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,19 +87,16 @@ services:
       - db-collie
       - discovery
 
-  microservice:
+  microservices:
     build:
       context: ../collie.service/
       dockerfile: Dockerfile
-    image: collie-service:latest
+    image: collie-microservices:latest
     environment:
       - spring.datasource.url=jdbc:postgresql://collie-db-collie:5432/collie
       - spring.datasource.username=collie
       - spring.datasource.password=collie
       - eureka.client.service-url.defaultZone=http://collie-discovery:8761/eureka/
-    deploy:
-      mode: replicated
-      replicas: 1
     restart: always
     networks:
       - private-network
