--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,12 +86,12 @@ services:
     depends_on:
       - db-collie
       - discovery
-
-  microservices:
+  
+  company:
     build:
-      context: ../collie.service/
+      context: ../collie.company-resource/
       dockerfile: Dockerfile
-    image: collie-microservices:latest
+    image: collie-company:latest
     environment:
       - spring.datasource.url=jdbc:postgresql://collie-db-collie:5432/collie
       - spring.datasource.username=collie
@@ -103,6 +103,7 @@ services:
     depends_on:
       - db-collie
       - discovery
+
 
   auth:
     build:
